bk_ida/sjengida/g3/display_board
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/display_board/src/utils.c:825:56: error: use of undeclared identifier 'off_428A40'
*( __m128 *)piece_rep = _mm_loadh_ps( ( const double *)off_428A40); 
                                                       ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/display_board/src/utils.c:826:60: error: use of undeclared identifier 'off_428A48'
*( __m128 *)&piece_rep[2] = _mm_loadh_ps( ( const double *)off_428A48); 
                                                           ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/display_board/src/utils.c:827:60: error: use of undeclared identifier 'off_428A50'
*( __m128 *)&piece_rep[4] = _mm_loadh_ps( ( const double *)off_428A50); 
                                                           ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/display_board/src/utils.c:828:60: error: use of undeclared identifier 'off_428A58'
*( __m128 *)&piece_rep[6] = _mm_loadh_ps( ( const double *)off_428A58); 
                                                           ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/display_board/src/utils.c:829:60: error: use of undeclared identifier 'off_428A60'
*( __m128 *)&piece_rep[8] = _mm_loadh_ps( ( const double *)off_428A60); 
                                                           ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/display_board/src/utils.c:830:62: error: use of undeclared identifier 'off_428A68'
*( __m128 *)&piece_rep[10] = _mm_loadh_ps( ( const double *)&off_428A68); 
                                                             ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/display_board/src/utils.c:831:62: error: use of undeclared identifier 'off_428A70'
*( __m128 *)&piece_rep[12] = _mm_loadh_ps( ( const double *)&off_428A70); 
                                                             ^
7 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/display_board/src/obj/utils.o] Error 1
